--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -57,7 +60,7 @@
         </div>
     </div>
 </div>
-<script src="js/jquery.js"></script>
-<script src="js/question.js"></script>
+</div>
+<script src="question.js"></script>
 </body>
 </html>
